fix alignment of header in res info, add margiargins

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -62,7 +62,7 @@
           <p>To make a reservation, please call our Vacation Cruise Planner, Jordan Walker, with the details listed below. <strong>Please make your room reservation and RSVP before October 2017.</strong></p>
         </div>
         <div class="small-12 medium-6 columns">
-          <div class="flex-container">
+          <div class="instruction-block">
             <h3 class="instruction-number">01</h3>
             <div class="instruction-info">
               <h5>Group Reservation Info</h5>
@@ -78,9 +78,9 @@
           </div>
         </div>
         <div class="small-12 medium-6 columns">
-          <div class="flex-container">
+          <div class="instruction-block">
             <h3 class="instruction-number">02</h3>
-            <div>
+            <div class="instruction-info">
               <h5>Room Type</h5>
               <p>Depending on what type of room you select, the Cruise Vacation Planner will assist in selecting your room so that you are close to the rest of the wedding guests.</p>
               <p>The options are Interior, Ocean View, Balcony, Mini-Suite, and Suite.</p>
@@ -90,9 +90,9 @@
         </div>
 
         <div class="small-12 medium-6 columns">
-          <div class="flex-container">
+          <div class="instruction-block">
             <h3 class="instruction-number">03</h3>
-            <div>
+            <div class="instruction-info">
               <h5>Your Information</h5>
               <p>Prepare the following information before calling the Cruise Vacation Planner:</p>
               <ul>
@@ -110,9 +110,9 @@
         </div>
 
         <div class="small-12 medium-6 columns">
-          <div class="flex-container">
+          <div class="instruction-block">
             <h3 class="instruction-number">04</h3>
-            <div>
+            <div class="instruction-info">
               <h5>Call Our Vacation Cruise Planner:</h5>
               <ul>
                 <li>Jordan Walker</li>
