full height hero, reposition navbar, change lr, change lead p styling

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,13 +1,15 @@
 <div class="row expanded collapse">
   <div class="column">
     <!-- hero -->
-    <div class="hero">
-      {{> navbar}}
-      {{> navbar-mobile}}
-      <h1 class="hero-header">Sail Away</h1>
-      <h2 class="small-header">with the Cheas</h2>
-      <h3 class="subheader">March 22 to 26, 2018</h3>
-      <h3 class="subheader">Aboard the Ruby Princess</h3>
+    {{> navbar}}
+    {{> navbar-mobile}}
+    <div class="hero flex-container flex-dir-column align-center">
+      <div class="hero-header-container">
+        <h1 class="hero-header">Sail Away</h1>
+        <h2 class="small-header">with the Cheas</h2>
+        <h3 class="subheader">March 22 to 26, 2018</h3>
+        <h3 class="subheader">Aboard the Ruby Princess</h3>
+      </div>
     </div>
     <!-- hero end -->
 
@@ -37,7 +39,7 @@
 
       <p>The Bride and Groom kindly request that all guests make their room reservation and <strong><a href="">RSVP</a> before November 2017</strong>, as the total number of guests are needed to complete the planning. In addition, due to budget restrictions, the Bride and Groom can only accommodate the individuals listed in the Save the Date and formal Wedding Invitation. Thank you so much for your understanding.</p>
 
-      <p><em>For more details, please go to the Princess Cruise website or call our Cruise Vacation Planner, <a href="#contact-section">Jordan Walker</a>.</em></p>
+      <p class="lead" style="color: #C5E5D9;">For more details, please go to the Princess Cruise website or call our Cruise Vacation Planner, <a href="#contact-section">Jordan Walker</a>.</p>
     </div>
 
     <div class="row collapse expanded" data-equalizer data-equalize-on="medium">
@@ -59,7 +61,7 @@
 
       <div class="row">
         <div class="small-12 columns text-center">
-          <p>To make a reservation, please call our Vacation Cruise Planner, Jordan Walker, with the details listed below. <strong>Please make your room reservation and RSVP before October 2017.</strong></p>
+          <p class="lead">To make a reservation, please call our Vacation Cruise Planner, Jordan Walker, with the details listed below. <strong>Please make your room reservation and RSVP before October 2017.</strong></p>
         </div>
         <div class="small-12 medium-6 columns">
           <div class="instruction-block">
@@ -126,19 +128,17 @@
       </div>
     </div>
 
-    <hr>
-
     <!-- useful-info -->
     <div class="useful-info">
-      <div class="flex-container">
-        <img src="http://placehold.it/30x30" alt="">
+      <div class="section-header">
+        <img src="{{root}}assets/img/info.png" alt="">
         <h4>Useful Information</h4>
       </div>
-      <div class="row">
-        <div class="small-12 medium-5 columns callout">
+      <div class="row useful-info-item-container">
+        <div class="small-12 medium-6 column useful-info-item">
           People that use our Group Reservation will receive onboard credit.  The more people we get under our Group, the more onboard credit everyone will receive.  We will not know how much onboard credit everyone will receive until two weeks before the cruise departs, but at minimum, everyone will receive $25/person.
         </div>
-        <div class="small-12 medium-5 columns callout ml-1">
+        <div class="small-12 medium-6 column useful-info-item">
           If at any time the cruise goes on sale, anyone who has reserved under our Group will receive the adjusted price.  If you have already put a deposit down, your total to be paid will be lowered.  If you have already paid the full amount, you will receive a refund.
         </div>
       </div>
