--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -134,12 +134,16 @@
         <img src="{{root}}assets/img/info.png" alt="">
         <h4>Useful Information</h4>
       </div>
-      <div class="row useful-info-item-container">
-        <div class="small-12 medium-6 column useful-info-item">
-          People that use our Group Reservation will receive onboard credit.  The more people we get under our Group, the more onboard credit everyone will receive.  We will not know how much onboard credit everyone will receive until two weeks before the cruise departs, but at minimum, everyone will receive $25/person.
+      <div class="row useful-info-item-container align-justify" data-equalizer data-equalize-on="medium">
+        <div class="small-12 medium-6 column">
+          <div class="useful-info-item" data-equalizer-watch>
+            People that use our Group Reservation will receive onboard credit.  The more people we get under our Group, the more onboard credit everyone will receive.  We will not know how much onboard credit everyone will receive until two weeks before the cruise departs, but at minimum, everyone will receive $25/person.
+          </div>
         </div>
-        <div class="small-12 medium-6 column useful-info-item">
-          If at any time the cruise goes on sale, anyone who has reserved under our Group will receive the adjusted price.  If you have already put a deposit down, your total to be paid will be lowered.  If you have already paid the full amount, you will receive a refund.
+        <div class="small-12 medium-6 column">
+          <div class="useful-info-item" data-equalizer-watch>
+            If at any time the cruise goes on sale, anyone who has reserved under our Group will receive the adjusted price.  If you have already put a deposit down, your total to be paid will be lowered.  If you have already paid the full amount, you will receive a refund.
+          </div>
         </div>
       </div>
     </div>
