--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -53,7 +53,7 @@
     <!-- cruise-information end -->
 
     <!-- instructions -->
-    <div class="instructions section-container">
+    <div class="instructions section-container border-bottom">
       <div class="section-header blue">
         <h2>Reservation Instructions</h2>
         <hr class="hr-blue">
@@ -63,7 +63,7 @@
         <div class="small-12 columns text-center">
           <p class="lead">To make a reservation, please call our Vacation Cruise Planner, Jordan Walker, with the details listed below. <strong>Please make your room reservation and RSVP before October 2017.</strong></p>
         </div>
-        <div class="small-12 medium-6 columns">
+        <div class="small-12 medium-6 columns border-right border-bottom">
           <div class="instruction-block">
             <h3 class="instruction-number">01</h3>
             <div class="instruction-info">
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="small-12 medium-6 columns">
+        <div class="small-12 medium-6 columns border-bottom">
           <div class="instruction-block">
             <h3 class="instruction-number">02</h3>
             <div class="instruction-info">
@@ -91,7 +91,7 @@
           </div>
         </div>
 
-        <div class="small-12 medium-6 columns">
+        <div class="small-12 medium-6 columns border-right">
           <div class="instruction-block">
             <h3 class="instruction-number">03</h3>
             <div class="instruction-info">
@@ -129,7 +129,7 @@
     </div>
 
     <!-- useful-info -->
-    <div class="useful-info">
+    <div class="useful-info section-container">
       <div class="section-header">
         <img src="{{root}}assets/img/info.png" alt="">
         <h4>Useful Information</h4>
