add button styles, edit section styels

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -155,10 +155,11 @@
 
     <div class="rsvp section-container">
       <div class="section-header blue">
-        <h2>Reservation Instructions</h2>
+        <h2>R.S.V.P.</h2>
         <hr class="hr-blue">
       </div>
       <p>To make a reservation, please call our Vacation Cruise Planner, Julie Hurley, with the details listed below. <strong>Please make your room reservation and RSVP before October 2017.</strong></p>
+      <a href="#" class="button">RSVP Now</a>
     </div>
     <!-- rsvp end -->
 
