fix contact spacing

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -52,102 +52,7 @@
     </div>
     <!-- cruise-information end -->
 
-    <!-- instructions -->
-    <div class="instructions section-container border-bottom">
-      <div class="section-header blue">
-        <h2>Reservation Instructions</h2>
-        <hr class="hr-blue">
-      </div>
-
-      <div class="row">
-        <div class="small-12 columns text-center">
-          <p class="lead">To make a reservation, please call our Vacation Cruise Planner, Jordan Walker, with the details listed below. <strong>Please make your room reservation and RSVP before October 2017.</strong></p>
-        </div>
-        <div class="small-12 medium-6 columns border-right border-bottom">
-          <div class="instruction-block">
-            <h3 class="instruction-number">01</h3>
-            <div class="instruction-info">
-              <h5>Group Reservation Info</h5>
-              <ul>
-                <li><strong>Group Name: </strong>The Chea Wedding</li>
-                <li><strong>Group Number: </strong>TPX</li>
-                <li><strong>Voyage Code: </strong>R718</li>
-                <li><strong>Ship: </strong>Ruby Princess</li>
-                <li><strong>Departure Date: </strong>March 22, 2018</li>
-                <li><strong>Destination: </strong>West Coast Cruise</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="small-12 medium-6 columns border-bottom">
-          <div class="instruction-block">
-            <h3 class="instruction-number">02</h3>
-            <div class="instruction-info">
-              <h5>Room Type</h5>
-              <p>Depending on what type of room you select, the Cruise Vacation Planner will assist in selecting your room so that you are close to the rest of the wedding guests.</p>
-              <p>The options are Interior, Ocean View, Balcony, Mini-Suite, and Suite.</p>
-              <a href="#">See pricing & room details >></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="small-12 medium-6 columns border-right">
-          <div class="instruction-block">
-            <h3 class="instruction-number">03</h3>
-            <div class="instruction-info">
-              <h5>Your Information</h5>
-              <p>Prepare the following information before calling the Cruise Vacation Planner:</p>
-              <ul>
-                <li><strong>a. </strong>All passengers names staying in your room as they appear on their passports</li>
-                <li><strong>b. </strong>Birth dates for all passengers</li>
-                <li><strong>c. </strong>[optional] Captain’s Circle Member number if you have cruised with Princess Cruises before</li>
-                <li><strong>d. </strong>Phone numbers, mailing addresses, and email addresses</li>
-                <li><strong>e. </strong>Preferred bed configuration (queen versus twin).</li>
-                <li>Note: This will depend on the type of room you are choosing and how many people are in your room. The Cruise Vacation Planner can help you through this.</li>
-                <li><strong>f. </strong>Dining selection. We kindly request that you select the 6:00PM traditional dining so that all of our wedding guests are together for dinner.</li>
-                <li><strong>g. </strong>Any special requirements you may have, including food allergies, dietary restrictions, medical needs, etc.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="small-12 medium-6 columns">
-          <div class="instruction-block">
-            <h3 class="instruction-number">04</h3>
-            <div class="instruction-info">
-              <h5>Call Our Vacation Cruise Planner:</h5>
-              <ul>
-                <li>Jordan Walker</li>
-                <li>(800) 901-1172 ext. 41839</li>
-                <li>Monday-Friday, 8:30AM to 5:15PM PST</li>
-              </ul>
-              <p>Aside from taking your reservation, the Vacation Cruise Planner can also help you with other questions regarding the cruise (ie. excursions, spa reservations, etc.)</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- useful-info -->
-    <div class="useful-info section-container">
-      <div class="section-header">
-        <img src="{{root}}assets/img/info.png" alt="">
-        <h4>Useful Information</h4>
-      </div>
-      <div class="row useful-info-item-container align-justify" data-equalizer data-equalize-on="medium">
-        <div class="small-12 medium-6 column">
-          <div class="useful-info-item" data-equalizer-watch>
-            People that use our Group Reservation will receive onboard credit.  The more people we get under our Group, the more onboard credit everyone will receive.  We will not know how much onboard credit everyone will receive until two weeks before the cruise departs, but at minimum, everyone will receive $25/person.
-          </div>
-        </div>
-        <div class="small-12 medium-6 column">
-          <div class="useful-info-item" data-equalizer-watch>
-            If at any time the cruise goes on sale, anyone who has reserved under our Group will receive the adjusted price.  If you have already put a deposit down, your total to be paid will be lowered.  If you have already paid the full amount, you will receive a refund.
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- instructions end -->
+    {{> instructions}}
 
     <!-- rsvp -->
     <div class="rsvp-container">
@@ -169,27 +74,27 @@
         <h2>Contact Us</h2>
         <hr class="hr-blue">
       </div>
-      <hr>
+      <hr class="hide-for-small-only">
       <div class="row">
-        <div class="small-6 medium-3 columns">
+        <div class="small-12 medium-6 large-3 columns contact-info">
           <h5 class="subtitle">Bride & Groom</h5>
           <p>thecheas118@gmail.com</p>
           <p>Henry  (408) 660 - 0670</p>
           <p>Caroline  (650) 580 - 0974</p>
         </div>
-        <div class="small-6 medium-3 columns">
+        <div class="small-12 medium-6 large-3 columns contact-info">
           <h5 class="subtitle">Cruise Planner</h5>
           <p>Jordan Walker</p>
           <p>jwalker@princesscruises.com</p>
           <p>(800) 901 - 1172 ext. 41839</p>
           <p>M - F 8:30 AM to 5:15 PM PST</p>
         </div>
-        <div class="small-6 medium-3 columns">
+        <div class="small-12 medium-6 large-3 columns contact-info">
           <h5 class="subtitle">Mother of the Bride</h5>
           <p>Maricar Cabrera</p>
           <p>(650) 703 - 2682</p>
         </div>
-        <div class="small-6 medium-3 columns">
+        <div class="small-12 medium-6 large-3 columns contact-info">
           <h5 class="subtitle">Mother of the Groom</h5>
           <p>Maly Meas</p>
           <p>(408) 768 - 5112</p>
