--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -27,7 +27,7 @@
     <!-- wedding party end -->
 
     <!-- cruise-information -->
-    <div class="cruise-information-container">
+    <div class="cruise-information-container" id="need-to-know">
     </div>
     <div class="cruise-information section-container">
       <div class="section-header white">
