--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,12 +14,7 @@
     <!-- hero end -->
 
     <!-- timeline -->
-    <div class="timeline section-container">
-      <div class="section-header blue">
-        <h2>Henry & Caroline</h2>
-        <hr class="hr-blue">
-      </div>
-    </div>
+    {{> timeline}}
     <!-- timeline end -->
 
     <!-- wedding party -->
@@ -58,7 +53,7 @@
     <div class="rsvp-container">
     </div>
 
-    <div class="rsvp section-container">
+    <div id="rsvp" class="rsvp section-container">
       <div class="section-header blue">
         <h2>R.S.V.P.</h2>
         <hr class="hr-blue">
@@ -69,7 +64,7 @@
     <!-- rsvp end -->
 
     <!-- contact -->
-    <div class="contact section-container" id="contact-section">
+    <div class="contact section-container" id="contact">
       <div class="section-header blue">
         <h2>Contact Us</h2>
         <hr class="hr-blue">
