--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,3 +1,9 @@
+<CENTER>
+<FORM>
+<input type="button" value="Enter Protected Area" onClick="passWord()">
+</FORM>
+</CENTER>
+
 <div class="row expanded collapse">
   <div class="column">
     <!-- hero -->
