--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,8 @@
-<CENTER>
-<FORM>
-<input type="button" value="Enter Protected Area" onClick="passWord()">
-</FORM>
-</CENTER>
+<div class="full-container text-center">
+  <form class="password-form">
+    <h2 class="">Sail Away with Us</h2>
+    <p>Thank you for sharing our special day with us! Please find the password to the site on your Save the Date!</p>
+    <p>Henry &#9829; Caroline</p>
+    <input type="button" value="Enter" onClick="passWord()" class="button">
+  </form>
+</div>
