rename party photos, add mobile party slide slilider, cancel on password stays on page

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -32,9 +32,9 @@
       </div>
       <p>Henry and Caroline’s wedding will take place aboard the Ruby Princess. Please see General Information and Reservation Instructions below. <strong>If this is your first time cruising, please be sure to read everything.</strong></p>
 
-      <p>The Bride and Groom kindly request that all guests make their room reservation and <strong><a href="">RSVP</a> before November 2017</strong>, as the total number of guests are needed to complete the planning. In addition, due to budget restrictions, the Bride and Groom can only accommodate the individuals listed in the Save the Date and formal Wedding Invitation. Thank you so much for your understanding.</p>
+      <p>The Bride and Groom kindly request that all guests make their room reservation and <strong><a href="#rsvp">RSVP</a> by October 1, 2017</strong>, as the total number of guests are needed to complete the planning. In addition, due to budget restrictions, the Bride and Groom can only accommodate the individuals listed in the Save the Date and formal Wedding Invitation. Thank you so much for your understanding.</p>
 
-      <p class="lead" style="color: #C5E5D9;">For more details, please go to the Princess Cruise website or call our Cruise Vacation Planner, <a href="#contact-section">Jordan Walker</a>.</p>
+      <p class="lead" style="color: #C5E5D9;">For more details, please go to the Princess Cruise website or call our Cruise Vacation Planner, <a href="#contact">Jordan Walker</a>.</p>
     </div>
 
     <div class="row collapse expanded" data-equalizer data-equalize-on="medium">
@@ -58,8 +58,9 @@
         <h2>R.S.V.P.</h2>
         <hr class="hr-blue">
       </div>
-      <p>To make a reservation, please call our Vacation Cruise Planner, Julie Hurley, with the details listed below. <strong>Please make your room reservation and RSVP before October 2017.</strong></p>
-      <a href="#" class="button">RSVP Now</a>
+      <p>The Bride and Groom kindly request that you only RSVP “Attending” after you have made your reservation with Princess Cruises and have your Stateroom Number.  Please RSVP by October 1, 2017. <strong>Please make your room reservation and RSVP before October 1, 2017.</strong> In addition, due to budget restrictions, the Bride and Groom can only accommodate the individuals listed in the Save the Date and formal Wedding Invitation. Thank you so much for your understanding.</p>
+      <a href="
+http://sailawaywiththecheas.anrsvp.com/" target="_blank" class="button">RSVP Now</a>
     </div>
     <!-- rsvp end -->
 
